cart/cartItem bug removed